adjust spacing to prevent horizontal scroll

--- a/src/Components/Joke.css
+++ b/src/Components/Joke.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  padding: 20px;
+  padding: 20px 0px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-collapse: collapse;
 }
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   font-weight: bold;
+  margin-left: 20px;
 }
 
 .Joke--icon {
@@ -43,6 +44,7 @@
   color: #424242;
   border-radius: 50%;
   box-shadow: 1px 5px 10px rgba(33, 33, 33, 0.3);
+  margin-right: 20px;
 }
 
 .Joke--green {
