--- a/src/Components/JokeList.css
+++ b/src/Components/JokeList.css
@@ -2,6 +2,7 @@
   display: flex;
   min-height: 100%;
   height: 100%;
+  max-width: 100%;
 }
 .JokeList--inner_container {
   display: flex;
